--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "recharts": "^2.12.7"
