--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
     "keep-react": "^1.5.0",
+    "lodash.debounce": "^4.0.8",
     "next": "14.2.8",
     "phosphor-react": "^1.4.1",
     "react": "^18",
