--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
     "src/components/table.jsx",
     "src/components/RecentOrder.jsx",
     "src/redux/slices/customerSlice.tsx",
-    "src/app/settings/page.jsx"
+    "src/app/settings/page.jsx",
+    "src/app/dashboard/page.tsx"
   ],
   "exclude": [
     "node_modules"
