--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-reactive-utils": "^8.5.1",
     "keep-react": "^1.5.0",
     "lodash.debounce": "^4.0.8",
     "next": "14.2.8",
