--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -34,22 +34,8 @@
     ".next/types/**/*.ts",
     "src/components/table.tsx",
     "src/components/RecentOrder.tsx",
-    "src/redux/slices/customerSlice.tsx",
-    "src/app/settings/page.jsx",
+    "src/redux/slices/customerSlice.ts",
     "src/app/dashboard/page.tsx",
-    "backend/server.js",
-    "backend/constants/config.js",
-    "backend/constants/messages.js",
-    "backend/middleware/authMiddleware.js",
-    "backend/models/Admin.js",
-    "backend/models/Product.js",
-    "backend/models/Order.js",
-    "backend/routes/userRoutes.js",
-    "backend/routes/productRoutes.js",
-    "backend/routes/authRoutes.js",
-    "backend/utils/tokenHelper.js",
-    "backend/utils/errorHandler.js",
-    "backend/utils/dbConnect.js"
   ],
   "exclude": [
     "node_modules"
