--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.eslintcache
+.prettier*  # Prettier cache files
 
 # local env files
 .env*.local
+.env.*
 
 # vercel
 .vercel
@@ -34,3 +37,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE/Editor files
+.vscode/
+.idea/
+
+# Build artifacts
+.turbo/
