--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.debounce": "^4.0.8",
     "mongoose": "^8.9.2",
     "next": "14.2.8",
+    "nodemailer": "^6.9.16",
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
@@ -35,6 +36,7 @@
     "@types/dateformat": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
