Resolved General Error

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,24 @@
 {
     "functions": {
         "api/auth/dashboard.ts": {
-            "maxDuration": 60
+            "maxDuration": 60,
+            "memory": 1024
         },
         "api/auth/customer.ts": {
-            "maxDuration": 60
+            "maxDuration": 60,
+            "memory": 1024
         },
         "api/auth/order.ts": {
-            "maxDuration": 60
+            "maxDuration": 60,
+            "memory": 1024
         },
         "api/auth/product.ts": {
-            "maxDuration": 60
+            "maxDuration": 60,
+            "memory": 1024
         },
         "api/auth/analysis.ts": {
-            "maxDuration": 60
+            "maxDuration": 60,
+            "memory": 1024
         }
     }
 }
