--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
-        "api/**/*.ts": {
-            "maxDuration": 60
+        "api/auth/*.js": {
+            "maxDuration": 30
         }
     }
 }
