--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
-        "api/auth/*.js": {
-            "maxDuration": 30
+        "pages/api/**/*.ts": {
+            "maxDuration": 60
         }
     }
 }
