--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash.debounce": "^4.0.8",
     "mongoose": "^8.9.2",
     "next": "14.2.8",
+    "next-themes": "^0.4.4",
     "nodemailer": "^6.9.16",
     "phosphor-react": "^1.4.1",
     "react": "^18",
