--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
